# BiotaPhyPy

./: .all-contributorsrc  .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  deleteme.txt  environment.yml  genindex.html  index.html  objects.inv  open_tree.py  pull_request_template.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_open_tree.py
.doctrees/: environment.pickle  index.doctree
.github/: CONTRIBUTING.md  release-drafter.yml
_modules/: ancestral_distribution.html  biotaphy.html  index.html  phylo_beta_diversity.html
_sphinx_config/: conf.py  index.rst
_static/: documentation_options.js
analyses/: analyses.html  ancestral_distribution.html  phylo_beta_diversity.html
autoapi/: index.html
biotaphy/: __init__.py  _version.py
ot_service_wrapper/: open_tree.py
pages/: about.html  contributing.html  data_formats.html  format_csv.html  format_json.html  format_newick.html  format_nexml.html  format_nexus.html  format_phylip.html  installation.html  quickstart.html  references.html
source/: analyses.ancestral_state.html  analyses.helpers.html  analyses.html  analyses.phylo_beta_diversity.html  analyses.tools.html  biotaphy.analyses.ancestral_state.html  biotaphy.analyses.helpers.html  biotaphy.analyses.html  biotaphy.analyses.phylo_beta_diversity.html  biotaphy.analyses.tools.html  biotaphy.client.html  biotaphy.client.ot_service_wrapper.html  biotaphy.html  modules.html
tests/: __init__.py  conftest.py  (+1 more)
(+335 files in other folders)
