[metadata]
name = biotaphypy
author = Biotaphy Team
author_email = cjgrady@ku.edu
description = Package of tools and extensions developed for the Biotaphy project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biotaphy/BiotaPhyPy
project_urls =
    Bug Tracker = https://github.com/biotaphy/BiotaPhyPy/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = biotaphy

[options.entry_points]
console_scripts =
    ancestral_distribution = biotaphy.tools.ancestral_distribution:cli
    phylo_beta_diversity = biotaphy.tools.phylo_beta_diversity:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = biotaphy/_version.py
versionfile_build = biotaphy/_version.py
tag_prefix = ''
